[gd_scene load_steps=8 format=3 uid="uid://tocme2b462e1"]

[ext_resource type="Texture2D" uid="uid://bbj3i45e4l3bb" path="res://assets/objects/Oil Barrel.png" id="1_3s47q"]
[ext_resource type="Script" path="res://sprites/oil_barrel.gd" id="2_4wvaq"]

[sub_resource type="Animation" id="Animation_vdcha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0pe4i"]
resource_name = "burn"
length = 0.35
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="Animation" id="Animation_qsuc6"]
resource_name = "ignite"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xmwd"]
_data = {
"RESET": SubResource("Animation_vdcha"),
"burn": SubResource("Animation_0pe4i"),
"ignite": SubResource("Animation_qsuc6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xeu31"]
size = Vector2(3, 96)

[node name="Oil Barrel" type="Sprite2D"]
texture = ExtResource("1_3s47q")
hframes = 5
script = ExtResource("2_4wvaq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8xmwd")
}

[node name="IgniteTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(19.5, 0)
shape = SubResource("RectangleShape2D_xeu31")

[node name="Flame Ball Spawn Location" type="Marker2D" parent="."]
position = Vector2(60, 36)

[connection signal="timeout" from="IgniteTimer" to="." method="_on_ignite_timer_timeout"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_collision_area_body_exited"]
